# talk-kedro-huggingface

./: .gitpod.Dockerfile  .gitpod.yml  README.md  catalog.yml  cheatsheet.ipynb  etl.py  main.ipynb  mastodon.ipynb  pyproject.toml  requirements.in  requirements.txt
conf/base/: catalog.yml  catalog_models.yml  logging.yml  parameters_data_cleaning.yml  parameters_data_extraction.yml  parameters_data_processing.yml  parameters_reporting.yml
conf/demo/: credentials.yml
src/social_summarizer/: __init__.py  __main__.py  settings.py
src/social_summarizer/datasets/: mastodon_statuses.py  polars_delta.py
src/social_summarizer/pipelines/data_cleaning/: __init__.py  nodes.py  pipeline.py
src/social_summarizer/pipelines/data_extraction/: __init__.py  nodes.py  pipeline.py
src/social_summarizer/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/social_summarizer/pipelines/reporting/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/data_processing/: test_pipeline.py
tests/: test_run.py
tests/pipelines/data_cleaning/: test_pipeline.py
tests/pipelines/data_extraction/: test_pipeline.py
tests/pipelines/reporting/: test_pipeline.py
